<resources>
    <string name="app_name">Simple_Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="button_07">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_Divide">/</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_Multiply">*</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_Add">+</string>
    <string name="button_Clear">C</string>
    <string name="button_0">0</string>
    <string name="button_Decimal">.</string>
    <string name="button_Subtract">-</string>
    <string name="button_Equals">=</string>
</resources>
